# mapalgebra

./: pyproject.toml
mapalgebra/: __init__.py  build_ndvi_slope.py  cache.npy  compute.py  main.py  merge2.py  method1.py  method2.py  method4.py  method5.py  ndvi_pearsonr.tif  ndvi_pearsonr.tif - Band_8.lyr  ndvi_pearsonr.tif.aux.xml  ndvi_pearsonr.tif.xml  ndvi_slope_p_class.tif.aux.xml  ndvi_zone.tif  ndvi_zone.tif.aux.xml  ndvi_zones.tif.aux.xml  render.py  result12.txt  result56.txt  test.py
script/: cli.py
tests/: test_mapalgebra.py
