[tool.poetry]
name = "mapalgebra"
version = "0.1.0"
description = ""
authors = ["chenn <chenn@gisuni.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pymannkendall = "^1.2"
numpy = "^1.18.4"
rasterio = "^1.1.4"
tqdm = "^4.46.0"
loguru = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
